# openai-semaphore-client

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/openai_semaphore_client/: __init__.py  core.py
tests/: test_core.py
